--- a/app/src/main/res/layout/activity_user_confirm_booking_qr.xml
+++ b/app/src/main/res/layout/activity_user_confirm_booking_qr.xml
@@ -20,6 +20,12 @@
         app:titleTextAppearance="@style/ToolbarTitleTextAppearance"
         app:titleTextColor="#FFFFFF" />
 
+    <ImageView
+        android:id="@+id/qrPlaceholder"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_gravity="center"
+        android:layout_margin="16dp" />
 
 
 </LinearLayout>
