--- a/app/src/main/res/layout/activity_transport_admin_booking_scanner.xml
+++ b/app/src/main/res/layout/activity_transport_admin_booking_scanner.xml
@@ -14,6 +14,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@drawable/background_toolbar"
         android:elevation="8dp"
+        app:menu="@menu/toolbar_menu_transport_scanner"
         app:navigationIcon="@drawable/ic_btn_back"
         app:subtitleTextAppearance="@style/ToolbarSubtitleTextAppearance"
         app:subtitleTextColor="#FFFFFF"
